# CSC145-RPG

./: .gitignore  Battle.cpp  Battle.h  BattleMenu.cpp  BattleMenu.h  DebugMenu.cpp  DebugMenu.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Equipment.cpp  Equipment.h  EquippedEntity.cpp  EquippedEntity.h  Floor.cpp  Floor.h  Inventory.cpp  Inventory.h  Menu.cpp  Menu.h  MenuEntry.cpp  MenuEntry.h  MenuNode.h  PU.cpp  PU.h  Player.cpp  Player.h  README.md  RegularItems.cpp  RegularItems.h  Room.cpp  Room.h  RoomTypes.cpp  RoomTypes.h  Scene.cpp  Scene.h  ShopMenu.cpp  ShopMenu.h  Status.cpp  (+24 more)
Menu/: BattleMenu.cpp  BattleMenu.h  DebugMenu.cpp  DebugMenu.h  Menu.cpp  Menu.h  StartMenu.cpp  StartMenu.h
entity/: ActionEnum.h  Enemy.cpp  Enemy.h  EnemyAI.cpp  EnemyAI.h  Entity.cpp  Entity.h  EnumAI.h  EquippedEntity.cpp  EquippedEntity.h  Player.cpp  Player.h  enemyai.cpp  enemylist.h  enemytiers.h
item/: ArmorSet.h  Equipment.cpp  Equipment.h  Item.cpp  Item.h  ItemDefs.h  ItemTypes.h  RegularItems.cpp  RegularItems.h  itemlist.h
resources/lang/: en_US.lang
scene/: Battle.cpp  Battle.h  Floor.cpp  Floor.h  Scene.cpp  Scene.h  Tower.cpp  Tower.h
scene/rooms/: BattleRoom.cpp  BattleRoom.h  EmptyRoom.cpp  EmptyRoom.h  Movement.cpp  Movement.h  Room.cpp  Room.h  RoomTypes.cpp  RoomTypes.h  SafeRoom.cpp  SafeRoom.h  ShopDialogue.h  ShopRoom.cpp  ShopRoom.h  TreasureRoom.cpp  TreasureRoom.h
