project('CSC145-RPG', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++20'])

game_src = [ 
  'Entity.cpp', 
  'Enemy.cpp',
  'game.cpp',
  'Menu.cpp',
  'DebugMenu.cpp',
  'Scene.cpp',
  'Battle.cpp',
  'BattleMenu.cpp',
  'Player.cpp',
  'RegularItems.cpp',
  'inventory.cpp',
  'Status.cpp',
  'item.cpp',
  'Equipment.cpp',
  'statustypes.cpp',
  'enemyai.cpp'
]   
executable(
  'game',
  game_src,
  install : true
)